tests/purs/failing/TypeSynonyms5.purs
-- @shouldFailWith CycleInTypeSynonym
module Main where

import Prelude

type T = T
